--- a/hodu/hodu.css
+++ b/hodu/hodu.css
@@ -116,7 +116,6 @@ main > h2 {
 h4 > span {
     color: #D97652;
 }
-
 main > h4 {
     width: 710px;
     height: 42px;
@@ -124,7 +123,154 @@ main > h4 {
     margin: 0px 605px 88px 605px;
     text-align: center;
 }
+.img_row {
+    display: grid;
+    list-style-type: none; /* 앞에 붙는 점 없애기 */
+    grid-template-columns: 378px 378px 378px;
+    gap: 72px;
+    margin: 0px 0px 100px 320px;
+}
+main > p{
+    width: 290px;
+    height: 30px;
+    margin: 100px 815px 28px 815px;
+    font-size: 24px;
+    font-weight: bold; /* 글자 굵기 조절 */
+}
+.show_more {
+    width: 143px; /* 박스 사이즈 조절 */
+    height: 50px; /* 박스 사이즈 조절 */
+    border-radius: 40px; /* 박스 모서리 둥글게 */
+    border-width: 0px; /* 박스 테두리 두께 */
+    font-size: 16px; /* 폰트 사이즈 */
+    gap: 10px; /* 글자와 박스 공간 조절 */
+    margin: 0px 888px 80px 888px; /* 위치 조정 */
+    background-color: #D97652; /* 박스 바탕색 설정 */
+    color: #FFFFFF; /* 글자 색 설정 */
+}
+.show_more:hover{
+    opacity: 0.5;
+}
+main > hr {
+    width: 1278px;
+    margin: 0px 322px 68px 320px;
+}
+.map_text{
+    display: flex;
+    flex-direction: column;
+}
+.map_text > h2{
+    width: 263px;
+    height: 45px;
+    font-size: 36px;
+    font-weight: bold;
+    margin: 0px 1337px 20px 320px;
+}
+.map_text > h4 {
+    width: 395px;
+    height: 20px;
+    font-size: 16px;
+    color: #606367;
+    margin: 0px 1205px 48px 320px;
+}
+#map{
+    width: 1278px;
+    height: 520px;
+    margin: 0px 322px 80px 320px;
+}
+.mail{
+    position: relative;
+    width: 1278px; /* 박스 사이즈 조절 */
+    height: 200px; /* 박스 사이즈 조절 */
+    border-radius: 30px; /* 박스 모서리 둥글게 */
+    border-width: 0px; /* 박스 테두리 두께 */
+    padding: 10px 35px; /* 글자와 박스 공간 조절 */
+    margin: 0px 320px 240px 320px; /* 위치 조정 */
+    flex-direction: column; /* 텍스트 열 방식으로 바꾸기 */
+    background-color: #263140; /* 박스 바탕색 설정 */
+    color: #FFFFFF; /* 글자 색 설정 */
+    z-index: 10;
+}
+.mail > h2{
+    width: 448px;
+    height: 45px;
+    font-size: 36px;
+    margin: 50px 186px 18px 58px;
+}
+.mail > h4{
+    width: 471px;
+    height: 36px;
+    font-size: 14px;
+    margin: 0px 163px 51px 58px;
+}
+.mail > article{
+    position: absolute;
+    width: 530px;
+    height: 60px;
+    margin: 69px 58px 71px 692px;
+    border-radius: 60px;
+    background-color: #FFFFFF;
+    z-index: 10;
+}
+.mail > article > img{
+    width: 24px;
+    height: 24px;
+    margin: 18px 16px 18px 28px;
+}
+.inpMail {
+    position: absolute;
+    width: 300px;
+    height: 20px;
+    font-size: 16px;
+    border-width: 0px;
+    margin: 20px 0px 0px 0px;
+}
+article > button {
+    position: absolute;
+    width: 135px; /* 박스 사이즈 조절 */
+    height: 50px; /* 박스 사이즈 조절 */
+    border-radius: 40px; /* 박스 모서리 둥글게 */
+    border-width: 0px; /* 박스 테두리 두께 */
+    gap: 10px; /* 글자와 박스 공간 조절 */
+    margin: 5px 6px 5px 320px; /* 위치 조정 */
+    background-color: #D97652; /* 박스 바탕색 설정 */
+    color: #FFFFFF; /* 글자 색 설정 */
+    font-size: 16px;
+}
+.backgroundCat{
+    position: absolute;
+    width: 1920px;
+    height: 340px;
+    top: 3819px;
+    z-index: 1;
+    margin: 65px 0px 45px 0px;
+}
+
+.rollUp{
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    z-index: 100;
+    opacity: 0.5;
+}
+.rollUp:hover{
+    opacity: 1;
+}
 
 footer {
-
+    display: flex;
+    width: 1920px;
+    height: 160px;
+}
+footer > img {
+    width: 226px;
+    height: 70px;
+    margin: 45px 826px 45px 320px;
+}
+.sns{
+    list-style: none;
+    width: 42px;
+    height: 42px;
+    gap: 20px;
+    margin: 58px 320px 60px 0px;
 }
