--- a/hodu/hodu.css
+++ b/hodu/hodu.css
@@ -130,6 +130,13 @@ main > h4 {
     gap: 72px;
     margin: 0px 0px 100px 320px;
 }
+.more_img {
+    display: grid;
+    list-style-type: none; /* 앞에 붙는 점 없애기 */
+    grid-template-columns: 378px 378px 378px;
+    gap: 72px;
+    margin: 0px 0px 100px 320px;
+}
 main > p{
     width: 290px;
     height: 30px;
